--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <meta name="keywords" content="Дипломный проект, Яндекс Практикум, Поиск фильмов">
     <title>Movies Explorer</title>
   </head>
-  <body class="body">
+  <body class="page">
     <div id="root"></div>
   </body>
 </html>
